--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"next\" \"cd studio && sanity start\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "sanity": "cd sanity && sanity start"
   },
   "dependencies": {
+    "concurrently": "^6.2.1",
     "next": "^11.1.0",
     "next-sanity": "^0.4.0",
     "pure-react-carousel": "^1.27.6",
@@ -18,6 +19,7 @@
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
+    "@sanity/cli": "^2.15.0",
     "@types/react": "17.0.14",
     "autoprefixer": "^10.2.6",
     "eslint": "7.30.0",
