--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"next\" \"cd studio && sanity start\"",
+    "dev": "concurrently \"next\" \"cd sanity && sanity start\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
