--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "concurrently \"next\" \"cd sanity && sanity start\"",
+    "build": "echo 'Building Sanity' && cd sanity && npm install && sanity build ../public/studio -y && cd .. && next build",
+    "start": "vercel dev",
+    "lint": "next lint",
+    "postinstall": "lerna bootstrap"
   },
   "dependencies": {
+    "concurrently": "^6.2.1",
     "next": "^11.1.0",
+    "next-sanity": "^0.4.0",
     "next-share": "^0.12.1",
     "pure-react-carousel": "^1.27.6",
     "react": "17.0.2",
@@ -17,10 +20,13 @@
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
+    "@sanity/cli": "^2.15.0",
     "@types/react": "17.0.14",
     "autoprefixer": "^10.2.6",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
+    "lerna": "^4.0.0",
+    "lerna-cli": "^4.1.0",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4",
     "typescript": "4.3.5"
