--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "concurrently": "^6.2.1",
+    "faunadb": "^4.3.0",
     "next": "^11.1.0",
     "next-sanity": "^0.4.0",
     "next-share": "^0.12.1",
