8t2au9: Add support for youtube videos in Sanity

--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "dependencies": {
     "concurrently": "^6.2.1",
     "faunadb": "^4.3.0",
+    "get-youtube-id": "^1.0.1",
     "next": "^11.1.0",
     "next-sanity": "^0.4.0",
     "next-share": "^0.12.1",
     "pure-react-carousel": "^1.27.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "react-youtube": "^7.13.1"
   },
   "devDependencies": {
     "@sanity/cli": "^2.15.0",
