--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "^11.1.0",
     "next-sanity": "^0.4.0",
     "next-share": "^0.12.1",
+    "next-translate": "^1.1.0",
     "pure-react-carousel": "^1.27.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
