--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "concurrently": "^6.2.1",
     "faunadb": "^4.3.0",
     "get-youtube-id": "^1.0.1",
+    "mercadopago": "^1.5.8",
     "next": "^11.1.0",
     "next-sanity": "^0.4.0",
     "next-share": "^0.12.1",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@sanity/cli": "^2.15.0",
+    "@types/mercadopago": "^1.5.5",
     "@types/react": "17.0.14",
     "autoprefixer": "^10.2.6",
     "eslint": "7.30.0",
