--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "next-translate": "^1.1.0",
     "pure-react-carousel": "^1.27.6",
     "react": "17.0.2",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.17.5",
     "react-icons": "^4.2.0",
     "react-youtube": "^7.13.1"
   },
@@ -32,6 +34,7 @@
     "@sanity/cli": "^2.15.0",
     "@types/mercadopago": "^1.5.5",
     "@types/react": "17.0.14",
+    "@types/react-credit-cards": "^0.8.1",
     "autoprefixer": "^10.2.6",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
