--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-sanity": "^0.4.0",
     "next-share": "^0.12.1",
     "next-translate": "^1.1.0",
+    "object-hash": "^2.2.0",
     "pure-react-carousel": "^1.27.6",
     "react": "17.0.2",
     "react-credit-cards": "^0.8.3",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@sanity/cli": "^2.15.0",
     "@types/mercadopago": "^1.5.5",
+    "@types/object-hash": "^2.2.1",
     "@types/react": "17.0.14",
     "@types/react-credit-cards": "^0.8.1",
     "autoprefixer": "^10.2.6",
