8dkxjj: configure internationalization nextjs (#19)
* 7h374e: Build news page

Add property to posts, export sanity functions

* Enable menu

* Add sanity models

* Build news page sections

* Add post page WIP

* Post view WIP

* Add post content component and custom css

* Css fixes

* Add sript to build only next locally

* Fix build, use AppHEader in all pages

* Renaming file

* Remove image from posts view, css fixes

* Fix post paragraph css

* 9vezqb: Add internationalization support for sanity

* Fix post spacing

* 8dkxjj: Setup next-translate

* Fix i18 config

* Add translations

* Implement translations on news page

* Implement translation on components

* Implement translation on menu

* Implement translations

* Add translations

* Move raised amount and percentage to common namespace

* Add money translation + main card

* Fix build,, remove test script

* Add locale dropdown for desktop

* Fix currency translation, add language selection for mobile

* Fix style in language selector

* Fix donations counter amount, add subtitles to videos

* update donations counter amount

* Fomat currency based on language

* Add translations to post views

Co-authored-by: floracodes <flor.calvo89@gmail.com>

--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
     "dev": "concurrently \"next\" \"cd sanity && sanity start\"",
     "prebuild": "echo 'Building Sanity to public/studio' && cd sanity && npm i && npx @sanity/cli build ../public/studio -y && echo 'Done'",
     "build": "next build",
+    "build-next": "next build",
     "sanity": "cd sanity && sanity start",
     "start": "vercel dev",
     "lint": "next lint",
     "postinstall": "lerna bootstrap"
   },
   "dependencies": {
+    "@sanity/block-content-to-react": "^3.0.0",
     "concurrently": "^6.2.1",
     "faunadb": "^4.3.0",
     "get-youtube-id": "^1.0.1",
     "next": "^11.1.0",
     "next-sanity": "^0.4.0",
     "next-share": "^0.12.1",
+    "next-translate": "^1.1.0",
     "pure-react-carousel": "^1.27.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
