b3hjg6: Payment gateway config (#20)
* 7h374e: Build news page

Add property to posts, export sanity functions

* Enable menu

* Add sanity models

* Build news page sections

* Add post page WIP

* Post view WIP

* Add post content component and custom css

* Css fixes

* Add sript to build only next locally

* Fix build, use AppHEader in all pages

* Renaming file

* Remove image from posts view, css fixes

* Fix post paragraph css

* 9vezqb: Add internationalization support for sanity

* Fix post spacing

* 8dkxjj: Setup next-translate

* Fix i18 config

* Add translations

* Implement translations on news page

* Implement translation on components

* Implement translation on menu

* Implement translations

* Add translations

* Move raised amount and percentage to common namespace

* Add money translation + main card

* Fix build,, remove test script

* Add locale dropdown for desktop

* Fix currency translation, add language selection for mobile

* Fix style in language selector

* Fix donations counter amount, add subtitles to videos

* update donations counter amount

* Fomat currency based on language

* Add translations to post views

* Add ML API + sdk code

* Add first version of payment form (working with test data)

* Fix frontend warning

* Add RHF and credit card library, start connecting validation with payment gateway process

* WIP: Payment with form created

* Add MP types to process payment

* use JS api, polish validations and UI

* Hanlde payment errors, UI Polish

* Polish payment and translations

* Fix thanks gif css

* Fix spacing

* Fix CTA css

* remove alert

* remove unused interface

* Fix fricking build

* Add device session id to payments creation headers

* Hide credit car payment option. Add links and thanks page

* improve translation

* Fix build errors

* Add mq3 signature

Co-authored-by: floracodes <flor.calvo89@gmail.c

--- a/package.json
+++ b/package.json
@@ -17,19 +17,26 @@
     "concurrently": "^6.2.1",
     "faunadb": "^4.3.0",
     "get-youtube-id": "^1.0.1",
+    "mercadopago": "^1.5.8",
     "next": "^11.1.0",
     "next-sanity": "^0.4.0",
     "next-share": "^0.12.1",
     "next-translate": "^1.1.0",
+    "object-hash": "^2.2.0",
     "pure-react-carousel": "^1.27.6",
     "react": "17.0.2",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.17.5",
     "react-icons": "^4.2.0",
     "react-youtube": "^7.13.1"
   },
   "devDependencies": {
     "@sanity/cli": "^2.15.0",
+    "@types/mercadopago": "^1.5.5",
+    "@types/object-hash": "^2.2.1",
     "@types/react": "17.0.14",
+    "@types/react-credit-cards": "^0.8.1",
     "autoprefixer": "^10.2.6",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
